Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card text-center">
-          <img src="/images/products/mens-2.jpg">
+          <img src="./images/products/mens-2.jpg">
           <div class="card-body">
             <h5 class="fw-semibold">Men Boxer</h5>
             <p class="price">₹499</p>
@@ -157,7 +157,7 @@
 
       <div class="col-md-4">
         <div class="card text-center">
-          <img src="/images/products/mens-1.jpg">
+          <img src="./images/products/mens-1.jpg">
           <div class="card-body">
             <h5 class="fw-semibold">Men Brief</h5>
             <p class="price">₹399</p>
@@ -180,7 +180,7 @@
 
       <div class="col-md-4">
         <div class="card text-center">
-          <img src="/images/products/mens.png">
+          <img src="./images/products/mens.png">
           <div class="card-body">
             <h5 class="fw-semibold">Cotton Vest</h5>
             <p class="price">₹299</p>
@@ -278,3 +278,4 @@ function addToCart(name, price) {
 
 </body>
 </html>
+
